WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26070
[Qt] EventSender.keyDown doesn't support Arrow Up and Down keys.
https://bugs.webkit.org/show_bug.cgi?id=26070
Summary
[Qt] EventSender.keyDown doesn't support Arrow Up and Down keys.
Yongjun Zhang
Reported
2009-05-28 14:54:11 PDT
It supports Left & Right key, but not Up and Down key.
Attachments
add support for Up Key and Down Key handling.
(1.62 KB, patch)
2009-05-28 14:58 PDT
,
Yongjun Zhang
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yongjun Zhang
Comment 1
2009-05-28 14:58:00 PDT
Created
attachment 30754
[details]
add support for Up Key and Down Key handling.
Holger Freyther
Comment 2
2009-05-28 18:57:37 PDT
Okay, it looks good but for which unit test are you doing this? Why isn't the Skipped list updated after having fixed this issue?
Yongjun Zhang
Comment 3
2009-05-29 08:07:22 PDT
Hi, there is no existing layout testcase for this fix (at least I couldn't find one in Skipped list). I spot this bug when I was trying to create a layout test for
https://bugs.webkit.org/show_bug.cgi?id=20303
. How about I create a layout test case under LayoutTest/platform/qt/events to test this fix?
Holger Freyther
Comment 4
2009-05-29 18:17:06 PDT
Comment on
attachment 30754
[details]
add support for Up Key and Down Key handling. Okay, the last comment was quite nice. Please land together with the fix in
bug #20303
so we can sure to not touch this part of the code.
Adam Barth
Comment 5
2009-06-01 23:55:00 PDT
Will land.
Adam Barth
Comment 6
2009-06-02 00:01:07 PDT
Sending WebKitTools/ChangeLog Sending WebKitTools/DumpRenderTree/qt/jsobjects.cpp Transmitting file data .. Committed revision 44349.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug