2009-06-01  Yongjun Zhang  <yongjun.zhang@nokia.com>>

Reviewed by Holger Freyther.  Landed by Adam Barth.

        <https://bugs.webkit.org/show_bug.cgi?id=26070>

        [Qt] EventSender.keyDown doesn't support Arrow Up and Down keys.
        Add Down and Up key support.

        * DumpRenderTree/qt/jsobjects.cpp:
        (EventSender::keyDown):



Canonical link: https://commits.webkit.org/36184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44349 268f45cc-cd09-0410-ab3c-d52691b4dbfc